--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "body-parser": "1.15.2",
+    "cookie-parser": "1.4.3",
     "ect": "0.5.9",
     "express": "4.14.0",
     "mongoose": "4.6.2"
