--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cookie-parser": "1.4.3",
     "ect": "0.5.9",
     "express": "4.14.0",
-    "mongoose": "4.6.2"
+    "jsonwebtoken": "7.1.9",
+    "mongoose": "4.6.2",
+    "morgan": "1.7.0"
   }
 }
